<resources>
    <string name="app_name">Save your time</string>
    <string name="s">Start</string>
    <string name="i">Introduction</string>
    <string name="buti">Continue</string>
    <string name="c">Courses</string>
    <string name="r">Recourses</string>
    <string name="c1">Understand the Difference Between Urgent and Important</string>
    <string name="c2">Do Difficult Work When You Know You’re Most Productive</string>
    <string name="c3">Stick to a Schedule and Don’t Miss Deadlines</string>
    <string name="goal_setting">Goal Setting</string>
    <string name="c5">Concentration and Focus</string>
    <string name="c10">Understand the Difference Between Urgent and Important</string>
    <string name="c101">Urgent things require your immediate attention. But just because something is urgent, doesn’t mean it’s important. Doing things that seem urgent but are actually of little significance costs us all a lot of time. You should always focus on what’s important: starting with urgent issues, and following with less urgent ones. For things that are urgent, but not important: try and delegate if there’s someone who can do them for you. If not, come back to them later (if necessary at all). Things that are neither urgent nor important? Ignore them. Or save them for last if they’re your guilty pleasures like playing video games. Use a priority matrix like this one, to keep tasks organized:</string>
    <string name="c102">Here are some practical examples to help you see the difference: Urgent and Important Tasks:Do This Now- Tax deadline. Sudden work crisis. Phone call from a strategic client. Not Urgent but Important Tasks: -Do This Later Exercising Long-term planning Learning new skills Urgent but Not Important Tasks:Delegate This- Phone call from a telemarketer. Most emails. Requests for favors from coworkers. Not Urgent and Not Important Tasks:- Delete This Browsing social media. Playing video games. Binge-watching TV series you’ve already seen 8 times.</string>
    <string name="return0">Return</string>
    <string name="exam">Exam</string>
    <string name="c201">Do Difficult Work When You Know You’re Most Productive</string>
    <string name="c202">All of us have certain times of day when we’re most productive. Schedule difficult tasks that require full focus for these times, if possible. Personally, I’m the exact opposite of a morning person. I know I can’t write for the first 2 to 3 hours after waking up. So I fill this time with smaller tasks such as replying to emails, taking care of the proper documentation of my work and so on. The priority matrix from the previous section also helps here: if you have a list of smaller, non-urgent but important tasks, you can always pick from them when you have a moment of spare time, but feel unable to do anything complex. For example.</string>
    <string name="c301">Stick to a Schedule and Don’t Miss Deadlines</string>
    <string name="c302">Keith Wilcox, a researcher out of Columbia University, analyzed half a million tasks entered into a popular to-do list app to check the users’ behavior. He found that when they changed the deadline for a task, it took them an average of 16 more days to complete the task than when they kept the original deadline. Missing deadlines is not a once in a while occurrence either—users changed deadlines on 51% of tasks. Creating a schedule for your whole week, in turn, helps you save time you’d spend deciding what task to do next. It’s best to use a to-do list to schedule out everything we’re going to do each week (and day) into our calendar and then just let the calendar direct us. A calendar itself can be your most important productivity tool. You can use it to measure the value of your work time so that you can make the most of your working hours.</string>
    <string name="c401">Goal Setting</string>
    <string name="c402">The most successful time managers have clear targets to aim for. They develop SMART Goals, allowing them to allocate their time effectively. Treasure Mapping is a powerful way to see your goals clearly – so that you\'re motivated to give them the time they need. Personal Mission Statements are also helpful for being organized and staying committed to your plans.</string>
    <string name="c501">Concentration and Focus</string>
    <string name="c502">It\'s no good just making the time to pursue your priorities. You have to use that time well, too. You have to be focused.</string>
    <string name="books">Books</string>
    <string name="films">Films</string>
    <string name="learn">Learn</string>
    <string name="a">Question</string>
    <string name="true_text">True</string>
    <string name="false_text">False</string>


    <string name="correct"><b>CORRECTNESS IS</b> \n
                           <b>%1$d</b> OUT OF 6</string>


    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>

    <string name="b">Simran Knows Following Skills:\n \t
                     <b>Ballet</b>\n \t
                     <b>HipHop</b></string>
    <string name="ca">Do You Think Simran Believes In:\n \t
                     <b>Luck!!!</b></string>
    <string name="d">Do You Think Simran Wants To Visit <b>Italy</b></string>
    <string name="e">Simran Loves Loyalty.</string>
    <string name="f">Simran Sleeps Less</string>
    <string name="next_text">next</string>
    <string name="prev_text">previous</string>
    <string name="text">1.Always start working on the easiest tasks, even if they are less important.</string>
    <string name="RadioButtonQuestionOneOptionOne">Yes, sometimes.</string>
    <string name="RadioButtonQuestionOneOptionTwo">No way.</string>
    <string name="RadioButtonQuestionOneOptionThree">I think we need at first do hardiest tasks, even if they are less important.</string>

    <string name="RadioButtonQuestionTwoOptionOne">The Mandala Of Light</string>
    <string name="RadioButtonQuestionTwoOptionTwo">The Eye Of Agamatto</string>
    <string name="RadioButtonQuestionTwoOptionThree">Kun Lun</string>

    <string name="RadioButtonQuestionThreeOptionOne">Vasily and Lynda Mihailovic</string>
    <string name="RadioButtonQuestionThreeOptionTwo">Anatoly and Anna Ransakhov</string>
    <string name="RadioButtonQuestionThreeOptionThree">Pietro and Wanda Maximoff</string>

    <string name="RadioButtonQuestionFourOptionOne">The Mind Stone</string>
    <string name="RadioButtonQuestionFourOptionTwo">The Space Stone</string>
    <string name="RadioButtonQuestionFourOptionThree">The Time Stone</string>

    <string name="Typehere">Type Your Answer Here in Small Letter</string>

    <string name="RadioButtonQuestionSevenOptionOne">8</string>
    <string name="RadioButtonQuestionSevenOptionTwo">4</string>
    <string name="RadioButtonQuestionSevenOptionThree">6</string>

    <string name="CheckBoxQuestionEightOptionOne">Black Widow</string>
    <string name="CheckBoxQuestionEightOptionTwo">SpiderMan</string>
    <string name="CheckBoxQuestionEightOptionThree">Falcon</string>
    <string name="CheckBoxQuestionEightOptionFour">Vision</string>


    <string name="AnswerFive">falcon</string>
    <string name="AnswerSix">virginia</string>

    <string name="ek_img_content">ExportKit Image</string>
    <string name="intro_text">      Do you ever feel like theres not enough time in the day?We all get the same 24 hours  so why do some people seem to achieve more with their time than others? The answer: good time management. Time management is the process of organizing and planning how to divide your time between different activities. Get it right, and youll end up working smarter, not harder, to get more done in less time  even when time is tight and pressures are high. The highest achievers manage their time exceptionally well. And by using Mind Tools time-management resources, you too can make the most of your time  starting right now!</string>
    <string name="continue_string">CONTINUE</string>

    <string name="courses_string">COURSES</string>
    <string name="resources_string">RESOURCES</string>

</resources>