<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Third.SticktoSchedule"
    tools:ignore="SpeakableTextPresentCheck">

    <LinearLayout
        android:id="@+id/a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F6EBEF">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c301"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c302"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"/>

            <ImageView
                android:layout_marginTop="10sp"
                android:id="@+id/imageView7"
                android:src="@drawable/c301"
                android:layout_width="match_parent"
                android:layout_height="390dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonc3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/return0"
                    android:backgroundTint="#F6F5F5"
                    android:layout_marginStart="5dp"
                    android:textColor="#5A3B0C"
                    android:layout_marginTop="20dp"/>

                <Button
                    android:id="@+id/button2c3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exam"
                    android:backgroundTint="#F6F5F5"
                    android:layout_marginStart="40dp"
                    android:textColor="#5A3B0C"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>
        </LinearLayout>

</ScrollView>
