<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Courses"
    tools:ignore="SpeakableTextPresentCheck"
    android:background="#F6EBEF">

    <LinearLayout
        android:id="@+id/a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="202dp"
                android:layout_height="304dp"
                app:srcCompat="@drawable/firstmenue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="74dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0"
                    android:text="@string/c1"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Learn"
                    android:backgroundTint="#F6F5F5"
                    android:layout_marginStart="90dp"
                    android:textColor="#5A3B0C"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="202dp"
                android:layout_height="304dp"
                app:srcCompat="@drawable/secondmenue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0"
                    android:text="@string/c2"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="90dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0"
                    android:backgroundTint="#F6F5F5"
                    android:text="Learn"
                    android:textColor="#5A3B0C" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="202dp"
                android:layout_height="304dp"
                app:srcCompat="@drawable/thirdmenue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/c3"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Learn"
                    android:backgroundTint="#F6F5F5"
                    android:layout_marginStart="90dp"
                    android:textColor="#5A3B0C"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="202dp"
                android:layout_height="254dp"
                app:srcCompat="@drawable/fourth" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/goal_setting"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Learn"
                    android:backgroundTint="#F6F5F5"
                    android:layout_marginStart="90dp"
                    android:textColor="#5A3B0C"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="202dp"
                android:layout_height="304dp"
                app:srcCompat="@drawable/fifthmenue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/c5"
                    android:textColor="@color/black"
                    android:textSize="20dp" />
                <Button
                    android:id="@+id/button8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="Learn"
                    android:backgroundTint="#F6F5F5"
                    android:layout_marginStart="90dp"
                    android:textColor="#5A3B0C"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>